INCLUDES = -I$(srcdir) -I$(srcdir)/gui -I$(srcdir)/events -I$(srcdir)/rpg
LDADD = $(srcdir)/glut/libScourgeGlut.a $(srcdir)/gui/libScourgeGui.a $(srcdir)/events/libScourgeEvents.a $(srcdir)/rpg/libScourgeRpg.a

SUBDIRS = glut gui rpg events

bin_PROGRAMS = scourge

scourge_SOURCES = \
	constants.cpp\
	constants.h\
	calendar.cpp\
	calendar.h\
	date.cpp\
	date.h\
	creature.cpp\
	creature.h\
	effect.cpp\
	effect.h\
	dungeongenerator.cpp\
	dungeongenerator.h\
	glshape.cpp\
	glshape.h\
	gltorch.cpp\
	gltorch.h\
	glteleporter.cpp\
	glteleporter.h\
	item.cpp\
	item.h\
	location.cpp\
	location.h\
	main.cpp\
	main.h\
	mainmenu.cpp\
	mainmenu.h\
	map.cpp\
	map.h\
	Md2.cpp\
	Md2.h\
	md2shape.cpp\
	md2shape.h\
	containergui.cpp\
	containergui.h\
	scourge.cpp\
	scourge.h\
	sdleventhandler.cpp\
	sdleventhandler.h\
	sdlhandler.cpp\
	sdlhandler.h\
	sdlscreenview.cpp\
	sdlscreenview.h\
	shape.cpp\
	shape.h\
	inventory.cpp\
	inventory.h\
	shapepalette.cpp\
	shapepalette.h\
	util.cpp\
	util.h\
	text.cpp\
	text.h\
	gllocator.cpp\
	gllocator.h\
	minimap.cpp\
	minimap.h\
	3ds.cpp\
	3ds.h\
	3dsshape.cpp\
	3dsshape.h\
	optionsmenu.cpp\
	optionsmenu.h\
	userconfiguration.cpp\
	userconfiguration.h\
	board.cpp\
	board.h\
	battle.cpp\
	battle.h\
	party.cpp\
	party.h\
	projectile.cpp\
	projectile.h\
	spellcaster.cpp\
	spellcaster.h

