INCLUDES = -I$./..

noinst_LIBRARIES = libScourgeGui.a

libScourgeGui_a_SOURCES = \
	widget.cpp\
	widget.h\
	widgetview.cpp\
	widgetview.h\
	canvas.cpp\
        canvas.h\
	button.cpp\
	button.h\
	label.cpp\
	label.h\
	checkbox.cpp\
	checkbox.h\
	cardcontainer.cpp\
	cardcontainer.h\
	draganddrop.cpp\
	draganddrop.h\
	multiplelabel.cpp\
	multiplelabel.h\
	scrollinglist.cpp\
	scrollinglist.h\
	window.cpp\
	window.h
