INCLUDES = -I$./..

AM_CPPFLAGS = $(BINRELOC_CFLAGS) -DBR_PTHREAD=0

noinst_LIBRARIES = libScourgeGui.a

libScourgeGui_a_SOURCES = \
	guitheme.cpp\
	guitheme.h\
	widget.cpp\
	widget.h\
	slider.cpp\
	slider.h\
	textfield.cpp\
	textfield.h\
	widgetview.cpp\
	widgetview.h\
	canvas.cpp\
        canvas.h\
	button.cpp\
	button.h\
	label.cpp\
	label.h\
	checkbox.cpp\
	checkbox.h\
	cardcontainer.cpp\
	cardcontainer.h\
	draganddrop.cpp\
	draganddrop.h\
	multiplelabel.cpp\
	multiplelabel.h\
	scrollinglist.cpp\
	scrollinglist.h\
	scrollinglabel.cpp\
	scrollinglabel.h\
	window.cpp\
	window.h\
	confirmdialog.cpp\
	confirmdialog.h\
	progress.cpp\
	progress.h
