INCLUDES = -I$./..

AM_CPPFLAGS = $(BINRELOC_CFLAGS) -DBR_PTHREAD=0

noinst_LIBRARIES = libSquirrel.a

libSquirrel_a_SOURCES = \
	sqpcheader.h\
	sqstdio.h\
	squtils.h\
	sqfuncproto.h\
	sqstdmath.h\
	sqclosure.h\
	sqstdstring.h\
	sqarray.h\
	sqstdaux.h\
	sqstdsystem.h\
	squirrel.h\
	sqopcodes.h\
	sqstdblob.h\
	sqstring.h\
	squserdata.h\
	sqclass.cpp\
	sqclass.h\
	sqdebug.cpp\
	sqlexer.cpp\
	sqlexer.h\
	sqtable.cpp\
	sqtable.h\
	sqmem.cpp\
	sqstate.cpp\
	sqstate.h\
	sqvm.cpp\
	sqvm.h\
	sqapi.cpp\
	sqfuncstate.cpp\
	sqfuncstate.h\
	sqobject.cpp\
	sqobject.h\
	sqcompiler.cpp\
	sqcompiler.h\
	sqbaselib.cpp

