INCLUDES = -I$(srcdir)
LDADD = $(top_builddir)/src/common/libScourgeCommon.a

bin_PROGRAMS = tools

tools_SOURCES = \
	common.cpp\
	common.h\
	datafile.cpp\
	datafile.h\
	dfbooks.cpp\
	dfbooks.h\
	dfgui.cpp\
	dfgui.h\
	dfmissions.cpp\
	dfmission.h\
	main.cpp\
	pagebook.cpp\
	pagebooks.cpp\
	pagebooks.h\
	page.cpp\
	page.h\
	pagegui.cpp\
	pagemissions.cpp\
	pagemissions.h
	
	
