INCLUDES = -I$(srcdir)
LDADD = $(top_builddir)/src/common/libScourgeCommon.a

bin_PROGRAMS = tools

tools_SOURCES = \
	common.cpp\
	common.h\
	colorselector.cpp\
	colorselector.h\
	datafile.cpp\
	datafile.h\
	dfbooks.cpp\
	dfbooks.h\
	dfcreatures.cpp\
	dfcreatures.h\
	dfgui.cpp\
	dfgui.h\
	dfmissions.cpp\
	dfmissions.h\
	dfskills.cpp\
	dfskills.h\
	dfspells.cpp\
	dfspells.h\
	dfclasses.cpp\
	dfclasses.h\
	dfcreatures.cpp\
	dfcreatures.h\
	listadddel.cpp\
	listadddel.h\
	main.cpp\
	page.cpp\
	page.h\
	pagebooks.cpp\
	pagebooks.h\
	pagecreatures.cpp\
	pagecreatures.h\
	pagegui.cpp\
	pagegui.h\
	pagemissions.cpp\
	pagemissions.h\
	pageskills.cpp\
	pageskills.h\
	pagespells.cpp\
	pagespells.h\
	subpageschools.cpp\
	subpageschools.h\
	subpagespells.cpp\
	subpagespells.h\
	pageclasses.cpp\
	pageclasses.h\
	pagecreatures.cpp\
	pagecreatures.h
	
	
