INCLUDES = -I$./..

noinst_LIBRARIES = libScourgeGui.a

libScourgeGui_a_SOURCES = \
	guitheme.cpp\
	guitheme.h\
	widget.cpp\
	widget.h\
	slider.cpp\
	slider.h\
	textfield.cpp\
	textfield.h\
	widgetview.cpp\
	widgetview.h\
	canvas.cpp\
        canvas.h\
	button.cpp\
	button.h\
	label.cpp\
	label.h\
	checkbox.cpp\
	checkbox.h\
	cardcontainer.cpp\
	cardcontainer.h\
	draganddrop.cpp\
	draganddrop.h\
	multiplelabel.cpp\
	multiplelabel.h\
	scrollinglist.cpp\
	scrollinglist.h\
	window.cpp\
	window.h\
	progress.cpp\
	progress.h
