INCLUDES = -I$(srcdir)

noinst_LIBRARIES = libScourgeRender.a

libScourgeRender_a_SOURCES = \
	map.cpp\
	map.h\
	frustum.cpp\
	frustum.h\
	projectile.cpp\
	projectile.h\
	location.cpp\
	location.h\
	effect.cpp\
	effect.h\
	item.cpp\
	item.h\
	creature.cpp\
	creature.h\
	shape.cpp\
	shape.h\
	glshape.cpp\
	glshape.h\
	gllocator.cpp\
	gllocator.h\
	gltorch.cpp\
	gltorch.h\
	glteleporter.cpp\
	glteleporter.h\
	Md2.cpp\
	Md2.h\
	md2shape.cpp\
	md2shape.h\
	3ds.cpp\
	3ds.h\
	3dsshape.cpp\
	3dsshape.h
