INCLUDES = -I$(srcdir)

AM_CPPFLAGS = $(BINRELOC_CFLAGS) -DBR_PTHREAD=0

noinst_LIBRARIES = libScourgeRender.a

libScourgeRender_a_SOURCES = \
	shapes.cpp\
	shapes.h\
	rendereditem.h\
	renderedcreature.cpp\
	renderedcreature.h\
	map.cpp\
	map.h\
	mapadapter.cpp\
	mapadapter.h\
	frustum.cpp\
	frustum.h\
	renderedprojectile.cpp\
	renderedprojectile.h\
	location.cpp\
	location.h\
	effect.cpp\
	effect.h\
	shape.cpp\
	shape.h\
	glshape.cpp\
	glshape.h\
	glcaveshape.cpp\
	glcaveshape.h\
	gllocator.cpp\
	gllocator.h\
	gltorch.cpp\
	gltorch.h\
	glteleporter.cpp\
	glteleporter.h\
	Md2.cpp\
	Md2.h\
	md2shape.cpp\
	md2shape.h\
	3ds.cpp\
	3ds.h\
	3dsshape.cpp\
	3dsshape.h
