INCLUDES = -I$(srcdir)
LDADD = $(top_builddir)/src/freetype/libScourgeFreeType.a \
	$(top_builddir)/src/gui/libScourgeGui.a \
	$(top_builddir)/src/rpg/libScourgeRpg.a \
	$(top_builddir)/src/net/libScourgeNet.a \
	$(top_builddir)/src/render/libScourgeRender.a \
	$(top_builddir)/src/io/libScourgeIo.a \
	$(top_builddir)/src/sqbinding/libSqbinding.a \
	$(top_builddir)/src/sqstdlib/libSqstdlib.a \
	$(top_builddir)/src/squirrel/libSquirrel.a \
	$(top_builddir)/src/events/libScourgeEvents.a \
	$(top_builddir)/src/test/libScourgeTest.a


bin_PROGRAMS = tools

tools_SOURCES = \
	common.cpp\
	common.h\
	datafile.cpp\
	datafile.h\
	dfbooks.cpp\
	dfbooks.h\
	dfgui.cpp\
	dfgui.h\
	dfmissions.cpp\
	dfmission.h\
	main.cpp\
	pagebook.cpp\
	pagebooks.cpp\
	pagebooks.h\
	page.cpp\
	page.h\
	pagegui.cpp\
	pagemissions.cpp\
	pagemissions.h
	
	
