INCLUDES = -I$(srcdir)
LDADD = $(top_builddir)/src/common/libScourgeCommon.a

bin_PROGRAMS = tools

tools_SOURCES = \
	common.cpp\
	common.h\
	datafile.cpp\
	datafile.h\
	dfbooks.cpp\
	dfbooks.h\
	dfgui.cpp\
	dfgui.h\
	dfmissions.cpp\
	dfmissions.h\
	dfskills.cpp\
	dfskills.h\
	dfspells.cpp\
	dfspells.h\
	dfclasses.cpp\
	dfclasses.h
	main.cpp\
	pagebooks.cpp\
	pagebooks.h\
	page.cpp\
	page.h\
	pagegui.cpp\
	pagegui.h\
	pagemissions.cpp\
	pagemissions.h\
	pageskills.cpp\
	pageskills.h\
	pagespells.cpp\
	pagespells.h\
	pageclasses.cpp\
	pageclasses.h
	
	
