INCLUDES = -I$./..

AM_CPPFLAGS = $(BINRELOC_CFLAGS) -DBR_PTHREAD=0 -I$(srcdir)/../squirrel

noinst_LIBRARIES = libSqstdlib.a

libSqstdlib_a_SOURCES = \
	sqstdaux.cpp\
	sqstdblobimpl.h\
	sqstdrex.c\
	sqstdstream.cpp\
	sqstdstream.h\
	sqstdsystem.cpp\
	sqstdblob.cpp\
	sqstdio.cpp\
	sqstdmath.cpp\
	sqstdstring.cpp

