INCLUDES = -I$(srcdir)

AM_CPPFLAGS = $(BINRELOC_CFLAGS) -DBR_PTHREAD=0

noinst_LIBRARIES = libScourgeNet.a

libScourgeNet_a_SOURCES = \
	broadcast.cpp\
	broadcast.h\
	client.cpp\
	client.h\
	clientinfo.cpp\
	clientinfo.h\
	commands.cpp\
	commands.h\
	gamestatehandler.cpp\
	gamestatehandler.h\
	server.cpp\
	server.h\
	tcputil.cpp\
	tcputil.h\
	testgamestatehandler.cpp\
	testgamestatehandler.h

